src/adapter/tui/widget/snapshots/muster__adapter__tui__widget__form__tests__renders_a_form_with_an_active_field.snap
---
source: src/adapter/tui/widget/form.rs
expression: terminal.backend()
---
"                                                        "
"      ╭ New project ─────────────────────────────╮      "
"      │                                          │      "
"      │  Name                                    │      "
"      │ ▎                                        │      "
"      │                                          │      "
"      │  Folder                                  │      "
"      │   ~/Projects                             │      "
"      │                                          │      "
"      │ ⏎ save   tab next   ←→ edit   esc cancel │      "
"      ╰──────────────────────────────────────────╯      "
"                                                        "
