src/adapter/tui/widget/snapshots/muster__adapter__tui__widget__form__tests__renders_a_path_field_with_a_dropdown.snap
---
source: src/adapter/tui/widget/form.rs
expression: terminal.backend()
---
"                                                        "
"                                                        "
"      ╭ New project ─────────────────────────────╮      "
"      │                                          │      "
"      │  Folder                                  │      "
"      │ ▎ ~/w/pr                                 │      "
"      │   ▸ prism                                │      "
"      │     proto                                │      "
"      │     project                              │      "
"      │                                          │      "
"      │ ⏎ save   tab next   ←→ edit   esc cancel │      "
"      ╰──────────────────────────────────────────╯      "
"                                                        "
"                                                        "
